2009-05-08  Petr Ovtchenkov  <ptr@void-ptr.info>

	* shm.h, shm.cc, shm_test.cc: paradigm of shared memory
	segment, coupled with file, removed, due to principal
	race condition;

	* shm_test.cc, flock_test.cc: reference to mt/xmt.h removed;
	
	* libxmt: release 2.1.1.

2009-05-01  Petr Ovtchenkov  <ptr@void-ptr.info>

	* uid.h, uid.cc: made from uuid_type POD type;

	* libxmt: release 2.1.0.

2009-04-20  Petr Ovtchenkov  <ptr@void-ptr.info>

	* uid.cc: fixed attempt to set failbit with wrong method;
	fixed ill-formed parsing of uid in input operator;

	* libxmt: release 2.0.16.

2009-04-07  Petr Ovtchenkov  <ptr@void-ptr.info>

	* uid.h, uid.cc: generate uid from raw data or string;

	* libxmt: release 2.0.15.

2009-04-06  Petr Ovtchenkov  <ptr@void-ptr.info>

	* uid.cc: skip whitespaces in uid formatted input;

	* libxmt: release 2.0.14.

2009-03-26  Petr Ovtchenkov  <ptr@void-ptr.info>

	* uid.h, uid.cc: added operator of formatted input
	for uid as normilized uid string;

	* libxmt: release 2.0.13.

2009-03-25  Petr Ovtchenkov  <ptr@void-ptr.info>

	* uidhash.h: define hash-function for xmt::uid for
	STL unordered associative containers.

2009-01-29  Petr Ovtchenkov  <ptr@void-ptr.info>

	* thread, thread.cc: copy signal block/unblock/set heandler
	methods from xmt;
	
	* libxmt: release 2.0.12.

2008-12-22  Petr Ovtchenkov  <ptr@void-ptr.info>

	* lfstream.h, lfstream.cc: re-implementation of lfstream,
	file streams with file locks; only fcntl-based
	implementation supported now; POSIX fcntl-based file locking
	don't provide file lock within same process; the solution
	with extra rw lock mutexes has ambiguity: global table
	required, because same file may be opened via different
	fstreams; that's why locking within same process not provided
	at all;

	* lfstream.h: remove lock manipulators, if ones present, all
	<< and >> operators should be overwritten;

	* libxmt: release 2.0.11.

2008-09-08  Petr Ovtchenkov  <ptr@void-ptr.info>
